<?xml version="1.0" encoding="UTF-8" ?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>
    <name>Frame Project Template :: Project</name>
    <description>${project.name}</description>
    <groupId>com.frame.template</groupId>
    <artifactId>frame-template-project</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <developers>
        <!--    <developer>-->
        <!--      <id>bijiasuo2006</id>-->
        <!--      <name>Yongjie Liu</name>-->
        <!--      <organization>GstDev</organization>-->
        <!--      <organizationUrl>http://gstdev.com</organizationUrl>-->
        <!--    </developer>-->
    </developers>

    <licenses>
        <license>
            <name>Apache v2</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.html</url>
        </license>
    </licenses>

    <scm>
        <url/>
    </scm>

    <organization>
        <name>GstDev</name>
        <url>http://gstdev.com</url>
    </organization>
    <parent>
        <groupId>com.gstdev.cloud</groupId>
        <artifactId>gstdev-cloud-dependencies</artifactId>
        <version>2024.0.1-SNAPSHOT</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>
    <!--  <parent>-->
    <!--    <groupId>com.gstdev.cloud</groupId>-->
    <!--    <artifactId>gstdev-cloud-project</artifactId>-->
    <!--    <version>2022.0.2-SNAPSHOT</version>-->
    <!--    <relativePath/> &lt;!&ndash; lookup parent from repository &ndash;&gt;-->
    <!--  </parent>-->

    <!--  <properties>-->
    <!--    <gstdev-template.version>1.0.0-SNAPSHOT</gstdev-template.version>-->
    <!--    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>-->
    <!--    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>-->
    <!--    <java.release>17</java.release>-->
    <!--    <java.version>1.${java.release}</java.version>-->
    <!--  </properties>-->

    <modules>
        <module>frame-template-dependencies</module>
        <module>frame-template-parent</module>
        <module>frame-template-common</module>
        <module>frame-template-autoconfigure</module>
        <module>frame-template-gateway</module>
        <module>frame-template-services</module>
        <module>module</module>
    </modules>

    <!--  <distributionManagement>-->
    <!--    &lt;!&ndash;正式版本&ndash;&gt;-->
    <!--    <repository>-->
    <!--      &lt;!&ndash;必须与 settings.xml 的 id 一致&ndash;&gt;-->
    <!--      <id>riching-repository-maven</id>-->
    <!--      <name>Riching Maven Releases Repository</name>-->
    <!--      <url>https://nexus.richingcloud.com/repository/maven-releases/</url>-->
    <!--    </repository>-->
    <!--    &lt;!&ndash;快照&ndash;&gt;-->
    <!--    <snapshotRepository>-->
    <!--      <id>riching-repository-maven-snapshots</id>-->
    <!--      <name>Riching Maven Snapshot Repository</name>-->
    <!--      <url>https://nexus.richingcloud.com/repository/maven-snapshots/</url>-->
    <!--    </snapshotRepository>-->
    <!--  </distributionManagement>-->
    <properties>
        <java.version>17</java.version>
        <resource.delimiter>@</resource.delimiter>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <!--配置参数-->
        <!--为了便于Docker的构建，减少上下文影响，将所有Docker资源放置在同一个目录中进行构建-->
        <!--        <docker.build.directory>../../configurations/docker/context/target</docker.build.directory>-->
        <!--        <docker.resource.name>${project.build.finalName}.${project.packaging}</docker.resource.name>-->
    </properties>
    <!-- 环境 -->
    <profiles>
        <!-- 开发 -->
        <profile>
            <id>development</id>
            <activation>
                <!--默认激活配置-->
                <activeByDefault>true</activeByDefault>
            </activation>
            <properties>
                <!--当前环境-->
                <profile>development</profile>
                <database>postgresql</database>
                <!--基础设施：tencent、alibaba、spring-->
                <facility>alibaba</facility>
                <!--代码构建控制-->
                <!--跳过构建源代码包-->
                <skip.build.source.package>false</skip.build.source.package>
                <!--不copy代码包到docker构建目录-->
                <skip.copy.docker.resource>true</skip.copy.docker.resource>
                <!--不执行git commit 构建-->
                <skip.build.git.commit.info>true</skip.build.git.commit.info>
                <!--Spring Cloud Alibaba配置中心命名空间,用于支持多环境.这里必须使用ID，不能使用名称,默认为空-->
                <alibaba.namespace>frame-cloud</alibaba.namespace>
                <!--Spring Cloud Alibaba配置中心地址-->
                <alibaba.config.server-addr>127.0.0.1:8848</alibaba.config.server-addr>
                <!--Spring Cloud Alibaba服务发现地址-->
                <alibaba.discovery.server-addr>127.0.0.1:8848</alibaba.discovery.server-addr>
                <alibaba.sentinel.server-addr>127.0.0.1:8858</alibaba.sentinel.server-addr>
            </properties>
        </profile>

    </profiles>
    <build>
        <plugins>
            <!-- spring boot 默认插件 -->

            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <version>3.0.0</version>
                <configuration>
                    <excludes>
                        <exclude>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                        </exclude>
                    </excludes>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                </configuration>
            </plugin>


            <!-- 拷贝插件 -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-antrun-plugin</artifactId>
            </plugin>

        </plugins>
    </build>
    <!--仓库路径 -->
    <repositories>
        <repository>
            <id>repo-maven</id>
            <name>Repo Apache</name>
            <url>https://repo.maven.apache.org/maven2/</url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>

        <repository>
            <id>riching-maven</id>
            <name>Public Repository</name>
            <url>https://nexus.esapiens.ai//repository/maven-public/</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>spring-milestones</id>
            <name>Spring Milestones</name>
            <url>https://repo.spring.io/milestone</url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>

    </repositories>

    <distributionManagement>
        <!--正式版本-->
        <repository>
            <!--必须与 settings.xml 的 id 一致-->
            <id>riching-repository-maven</id>
            <name>Riching Maven Releases Repository</name>
            <url>https://nexus.esapiens.ai//repository/maven-releases/</url>
        </repository>
        <!--快照-->
        <snapshotRepository>
            <id>riching-repository-maven-snapshots</id>
            <name>Riching Maven Snapshot Repository</name>
            <url>https://nexus.esapiens.ai//repository/maven-snapshots/</url>
        </snapshotRepository>

    </distributionManagement>
</project>
